@@ -1,3 +1,15 @@
+2006-03-15  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* configure.ac: Remove checks for prfpregset_t.
+	* gdb_proc_service.h: New file.
+	* linux-i386-low.c, linux-x86-64-low.c, thread-db.c: Use the
+	new "gdb_proc_service.h".
+	* proc-service.c: Likewise.
+	(ps_pglobal_lookup, ps_pdread, ps_pdwrite): Use psaddr_t.
+	(ps_lgetfpregs, ps_lsetfpregs): Use a void* argument.
+	* Makefile.in (gdb_proc_service_h): Updated.
+	* configure, config.in: Regenerated.
+
 2006-03-03  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* remote-utils.c (prepare_resume_reply): Move declaration
